--- a/exercises/instructions/6.md
+++ b/exercises/instructions/6.md
@@ -3,7 +3,7 @@
 # Exercício 6
 
 #### Objetivo
-Vamos implementar o suporte para a cláusula where, para o comando select, com suporte para os operadores =, > e <.
+Vamos implementar o suporte para a cláusula where, para o comando select, com suporte apenas para uma cláusula, com o operador "=". Como desafio, pode ser implementado o suporte para os operadores ">" e "<" e também para múltiplas cláusulas.
 
 #### Tempo
 45 minutos
@@ -13,24 +13,22 @@ Vamos implementar o suporte para a cláusula where, para o comando select, com s
 Dado o comando:
 
 ```sql
-select id, name, age from author where id = 3 and age > 50 and age < 60
+select id, name, age from author where id = 3
 ```
 
 1. Inclua o tratamento necessário para extrair as cláusulas do comando
-2. Crie um objeto contendo "column", "operator" e "value" para cada uma das cláusulas
-3. Armazene os objetos em um array
+2. Crie um objeto contendo "column", "operator" e "value" para cada cláusula
+3. Armazene o objeto em um array
 
 Exemplo:
 
 ```javascript
-[
-	{"column": "id", "operator": "=", "value": "3"},
-	{"column": "age", "operator": ">", "value": "50"},
-	{"column": "age", "operator": "<", "value": "60"}
-]
+	[
+     {"column": "id", "operator": "=", "value": "3"}
+   ]
 ```
 
-4. Na classe "Table", crie um objeto chamado "getData" que é responsável apenas por retornar os dados de uma tabela, conforme as cláusulas
+4. Na classe "Table", crie um objeto chamado "getData" que é responsável apenas por retornar os dados de uma tabela, conforme a cláusula
 5. Utilize o método "getData" no método select para retornar os dados conforme a cláusula where
 
 #### Cenário
