--- a/exercises/instructions/7.md
+++ b/exercises/instructions/7.md
@@ -3,18 +3,23 @@
 # Exercício 7
 
 #### Objetivo
-Chegou a hora de dividir o projeto em módulos.
+Vamos aproximar o exercício do mundo real. Para isso, no método "execute" da classe "Database", vamos adicionar um tempo de resposta randomico, juntamente com o retorno de uma promise. Com isso, é necessário encadear todas as chamadas para o método "execute", caso contrário, é possível que o método "select", seja executado antes do método "insert".
 
 #### Tempo
 15 minutos
 
 #### Instruções
 
-1. Crie um módulo chamado "Database.js"
-2. Mova a classe "Database" para o módulo "Database.js"
-3. Exporte a classe "Database" por padrão
-4. Importe a classe "Database"
+1. Introduza um timeout randomico no retorno do método "execute"
+1. Retorne uma promise no método "execute" da classe "Database"
+2. Altere as chamadas do método "execute" para utilizar o "then" e o "catch" 
+
+#### Dicas
+
+> No Node.js, utilize a função setTimeout(fn, ms), passando o tempo em milisegundos no segundo parâmetro.
 
 #### Conteúdo abordado neste exercício
 
-* Modules
+* Promise
+* Math.random
+* Math.floor
